--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppBanGiayComplete">
         <activity
+            android:name=".Activity.EditOrder"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.OrderManagement"
+            android:exported="false" />
+        <activity
             android:name=".Activity.EditProduct"
             android:exported="false" />
         <activity
-            android:name=".Activity.QuanLySanPham"
+            android:name=".Activity.ProductManagement"
             android:exported="false" />
         <activity
-            android:name=".Activity.EditOderProduct"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.QuanLyDonHang02"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.AddOderProduct"
+            android:name=".Activity.AddProduct"
             android:exported="false" />
         <activity
             android:name=".QuanLySanPhamActivity"
@@ -31,7 +31,7 @@
             android:name=".fragment.ThemSanPhamFragment"
             android:exported="false" />
         <activity
-            android:name=".Activity.DangNhapActivity"
+            android:name=".Activity.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
